fixed spacing

--- a/app/assets/stylesheets/profile.scss
+++ b/app/assets/stylesheets/profile.scss
@@ -208,33 +208,43 @@
 
 @media (min-width: 992px){
 .modal-lg {
-    max-width: 90%;
+    max-width: 87%;
 }}
 
 .modal-image{
-  width:600px;
-  height:600px;
+  width:550px;
+  height:550px;
   object-fit: cover;
 }
 
 .modal-item-container{
-
+ margin-top: -96px;
 }
 
 .modal-form-container{
-  padding-left: 5px;
- width: 92%;
+ padding-left: 5px;
+ width: 95%;
  display: flex;
  flex-direction: column-reverse;
+ align-self: flex-end;
+ height: 12%;
 }
 .modal-avatar-container{
-  height:45px;
+  margin-left: 2px;
+  height: 60px;
+  width: 93%;
 }
-
+.modal-padding{
+  margin-top: 10px;
+}
+.modal-border{
+  border-bottom: 1px solid lightgrey;
+}
 .modal-avatar{
 width: 45px;
 height: 45px;
 border-radius: 50%;
 margin-top: 6px;
 margin-left: 6px;
+margin-right: 9px;
 }
